# turbo-cdn

./: .gitignore  CHANGELOG.md  COMPLIANCE.md  CONTRIBUTING.md  CROSS_COMPILATION_FIXES.md  Cargo.toml  Cross.toml  PRIVACY_POLICY.md  README.md  README_zh.md  TERMS_OF_SERVICE.md  build.rs  release-plz.toml
.cargo/: config.toml
.github/workflows/: ci.yml  code-quality.yml  docs.yml  release-plz.yml  release.yml
.kiro/specs/performance-optimization-and-ci-publishing/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
benches/: download_benchmarks.rs  url_mapping_benchmarks.rs  url_mapping_string_benchmarks.rs
ci/: ubuntu-install-packages
config/: default.toml
docs/: PROC_MACRO_CROSS_COMPILATION_SOLUTION.md  PROC_MACRO_FIX_SUMMARY.md  RELEASE_PLZ_SETUP.md  SIMPLIFIED_CI_SETUP.md  URL_OPTIMIZATION.md  VX_INTEGRATION.md
docs-site/: index.md  package-lock.json  package.json
docs-site/.vitepress/: config.mts
docs-site/api/: download-options.md  index.md  turbo-cdn.md
docs-site/guide/: adaptive-concurrency.md  cdn-quality.md  dns-cache.md  geo-detection.md  getting-started.md  index.md  installation.md  self-update.md  smart-chunking.md  smart-download.md
docs-site/zh/: index.md
docs-site/zh/api/: download-options.md  index.md  turbo-cdn.md
docs-site/zh/guide/: adaptive-concurrency.md  cdn-quality.md  dns-cache.md  geo-detection.md  getting-started.md  index.md  installation.md  smart-chunking.md  smart-download.md
docs/v0.1.1/: search-index.js
docs/v0.1.1/search.desc/turbo_cdn/: turbo_cdn-desc-0-.js
docs/v0.1.1/src/turbo_cdn/: cache.rs.html  config.rs.html  error.rs.html  lib.rs.html  progress.rs.html
docs/v0.1.1/turbo_cdn/: all.html  enum.DetectedSourceType.html  enum.Source.html  fn.init_tracing.html  index.html  sidebar-items.js  struct.ParsedUrl.html  struct.TurboCdn.html  struct.TurboCdnBuilder.html  struct.TurboCdnStats.html
docs/v0.1.1/turbo_cdn/cache/: enum.CacheLookup.html  index.html  struct.CacheEntry.html  struct.CacheManager.html  struct.CacheStats.html  struct.MetadataStore.html
docs/v0.1.1/turbo_cdn/compliance/: enum.AuditEventType.html  enum.RiskLevel.html  index.html  struct.AuditLogEntry.html  struct.AuditLogger.html  struct.ComplianceChecker.html  struct.ComplianceResult.html  struct.ContentValidator.html  struct.DownloadRequest.html  struct.LicenseInfo.html  struct.LicenseValidator.html
docs/v0.1.1/turbo_cdn/config/: enum.LogFormat.html  enum.Region.html  index.html  struct.CacheConfig.html  struct.CloudflareConfig.html  struct.ComplianceConfig.html  struct.CustomSourceConfig.html  struct.DataProtectionConfig.html  struct.FastlyConfig.html  struct.GeneralConfig.html  struct.GitHubConfig.html  struct.JsDelivrConfig.html  struct.LoggingConfig.html  struct.MetricsConfig.html  struct.NetworkConfig.html  struct.ProxyConfig.html  struct.SourcesConfig.html  struct.TurboCdnConfig.html
docs/v0.1.1/turbo_cdn/downloader/: index.html  struct.DownloadOptions.html  struct.DownloadOptionsBuilder.html  struct.DownloadResult.html  struct.Downloader.html
docs/v0.1.1/turbo_cdn/error/: index.html  (+3 more)
docs/v0.1.2/: crates.js  search-index.js  src-files.js
docs/v0.1.2/turbo_cdn/: all.html  enum.DetectedSourceType.html  enum.Source.html  fn.init_tracing.html  index.html  sidebar-items.js  struct.ParsedUrl.html  struct.TurboCdn.html  struct.TurboCdnBuilder.html  struct.TurboCdnStats.html
docs/v0.2.0/: search-index.js  src-files.js
docs/v0.2.0/turbo_cdn/: all.html  enum.DetectedSourceType.html  enum.Source.html  fn.init_tracing.html  index.html  sidebar-items.js  struct.ParsedUrl.html  struct.TurboCdn.html  struct.TurboCdnBuilder.html  struct.TurboCdnStats.html
docs/v0.2.1/: help.html  search-index.js  src-files.js
docs/v0.2.1/turbo_cdn/: all.html  enum.DetectedSourceType.html  enum.Source.html  fn.init_tracing.html  index.html  sidebar-items.js  struct.ParsedUrl.html  struct.TurboCdn.html  struct.TurboCdnBuilder.html  struct.TurboCdnStats.html
docs/v0.3.0/: search-index.js  settings.html  src-files.js
docs/v0.3.0/turbo_cdn/: all.html  fn.init_tracing.html  index.html  sidebar-items.js  struct.DownloadOptions.html  struct.TurboCdn.html  struct.TurboCdnStats.html
examples/: README.md  async_api_demo.rs  url_optimization.rs  url_parsing_demo.rs
examples/api/: advanced_config.rs  async_api.rs  basic_usage.rs
examples/cli/: advanced_usage.md  basic_download.md  batch_operations.md
examples/integration/: ci_cd_usage.md  docker_usage.md  vx_integration.rs
examples/performance/: benchmarks.rs  monitoring.rs  tuning.md
scripts/: README.md  ci-proc-macro-fix.sh  fix-clippy-format.ps1  fix-clippy-format.sh  fix-clippy-simple.ps1  fix-proc-macro-env.ps1  fix-proc-macro-env.sh  fix-specific-issues.ps1  test-build.ps1  test-build.sh  test-cross-compilation.ps1  test-cross-compilation.sh
src/: adaptive_concurrency.rs  adaptive_speed_controller.rs  bounded_cache.rs  cache.rs  cdn_quality.rs  cli_progress.rs  compliance.rs  concurrent_downloader.rs  config.rs  constants.rs  dns_cache.rs  domain_manager.rs  downloader.rs  error.rs  geo_detection.rs  github_releases.rs  http_client.rs  http_client_manager.rs  lib.rs  load_balancer.rs  logging.rs  main.rs  memory_tracker.rs  mmap_writer.rs  progress.rs  router.rs  server_quality_scorer.rs  server_tracker.rs  smart_chunking.rs  smart_downloader.rs  streaming_downloader.rs  string_interner.rs  url_mapper.rs
src/config/: default.toml  manager.rs  mod.rs  models.rs
src/sources/: cloudflare.rs  fastly.rs  github.rs  jsdelivr.rs  mirror_manager.rs  mod.rs
src/utils/: mod.rs  paths.rs
tests/: adaptive_concurrency_tests.rs  async_api_tests.rs  builder_tests.rs  cache_tests.rs  compliance_tests.rs  config_test.rs  config_tests.rs  core_tests.rs  dns_cache_tests.rs  downloader_tests.rs  e2e_tests.rs  error_tests.rs  feature_tests.rs  github_download_test.rs  http_client_manager_tests.rs  integration_tests.rs  load_balancer_tests.rs  memory_tracking_integration_test.rs  progress_tests.rs  router_tests.rs  smart_chunking_tests.rs  url_parsing_tests.rs
(+592 files in other folders)
