[package]
name = "turbo-cdn"
version = "0.2.1"
edition = "2021"
authors = ["Hal <hal.long@outlook.com>"]
description = "Intelligent download accelerator with automatic CDN optimization and concurrent chunked downloads"
license = "MIT"
repository = "https://github.com/loonghao/turbo-cdn"
homepage = "https://github.com/loonghao/turbo-cdn"
documentation = "https://docs.rs/turbo-cdn"
readme = "README.md"
keywords = ["download", "cdn", "accelerator", "opensource", "rust"]
categories = [
    "network-programming",
    "web-programming",
    "command-line-utilities",
]
exclude = ["/.github/", "/tests/fixtures/", "/benches/", "*.md"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full", "fs"] }

# HTTP client - optimized for performance and cross-platform compatibility
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "rustls-tls",      # Use rustls instead of OpenSSL to avoid build issues
    "gzip",
    "brotli",
    "deflate",
    "http2",           # Enable HTTP/2 support for better performance
    "charset",         # Better charset handling
    "trust-dns",       # Use trust-dns for better DNS resolution
], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# URL handling
url = "2.0"

# Async utilities
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Progress tracking
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# File system operations
tokio-util = { version = "0.7", features = ["io"] }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Regex
regex = "1.0"

# High-performance HTTP clients
isahc = { version = "1.7", features = ["json"] }
ureq = { version = "2.10", features = ["json"], optional = true }

# Memory optimization
mimalloc = "0.1"

# Fast hashing
ahash = { version = "0.8", optional = true }
dashmap = "6.0"
once_cell = "1.19"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.0"
wiremock = "0.6"
criterion = { version = "0.6", features = ["html_reports"] }
proptest = "1.0"

# Test utilities
pretty_assertions = "1.0"
serial_test = "3.0"

[features]
default = ["rustls-tls", "fast-hash", "high-performance"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
fast-hash = ["ahash"]
high-performance = []
ureq-client = ["ureq"]


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true
