[package]
name = "turbo-cdn"
version = "0.6.0"
edition = "2021"
authors = ["Hal <hal.long@outlook.com>"]
description = "Intelligent download accelerator with automatic CDN optimization and concurrent chunked downloads"
license = "MIT"
repository = "https://github.com/loonghao/turbo-cdn"
homepage = "https://github.com/loonghao/turbo-cdn"
documentation = "https://docs.rs/turbo-cdn"
readme = "README.md"
keywords = ["download", "cdn", "accelerator", "opensource", "rust"]
categories = [
    "network-programming",
    "web-programming",
    "command-line-utilities",
]
exclude = ["/.github/", "/tests/fixtures/", "*.md"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full", "fs"] }

# HTTP client - optimized for performance and cross-platform compatibility
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "rustls-tls",      # Use rustls instead of OpenSSL to avoid build issues
    "gzip",
    "brotli",
    "deflate",
    "http2",           # Enable HTTP/2 support for better performance
    "charset",         # Better charset handling
    "hickory-dns",     # Use hickory-dns (formerly trust-dns) for better DNS resolution
], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# URL handling (updated to fix idna security vulnerability RUSTSEC-2024-0421)
url = "2.5.4"

# Async utilities
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Progress tracking
indicatif = "0.18"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "ansi"] }
tracing-appender = "0.2"
tracing-log = "0.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# File system operations
tokio-util = { version = "0.7", features = ["io"] }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# CLI
clap = { version = "4.5", features = ["derive", "color"] }

# Regex
regex = "1.0"

# HTTP client with rustls for better cross-platform compatibility
# Using only reqwest to simplify the project and avoid OpenSSL compilation issues

# Memory optimization and high-performance I/O
mimalloc = "0.1"
memmap2 = "0.9"

# Fast hashing and concurrent data structures
ahash = { version = "0.8", optional = true }
dashmap = "6.0"
once_cell = "1.19"

# DNS resolution and caching (using hickory-dns, the successor to trust-dns)
hickory-resolver = "0.25"
lru = "0.16"

# Compression support
flate2 = "1.0"
brotli = "8.0"

# Network performance monitoring
ping = "0.7"

# Self-update functionality
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.0"
wiremock = "0.6"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1.0"

# Test utilities
pretty_assertions = "1.0"
serial_test = "3.0"

[features]
default = ["rustls-tls", "fast-hash", "high-performance"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
fast-hash = ["ahash"]
high-performance = []


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.test]
opt-level = 1
debug = true
overflow-checks = true

# Optimized profile for distribution
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true

# Examples
[[example]]
name = "basic_usage"
path = "examples/api/basic_usage.rs"

[[example]]
name = "async_api"
path = "examples/api/async_api.rs"

[[example]]
name = "advanced_config"
path = "examples/api/advanced_config.rs"

[[example]]
name = "vx_integration"
path = "examples/integration/vx_integration.rs"

[[example]]
name = "benchmarks"
path = "examples/performance/benchmarks.rs"

[[example]]
name = "monitoring"
path = "examples/performance/monitoring.rs"

# Benchmarks
[[bench]]
name = "download_benchmarks"
harness = false

# Linting configuration
[lints.rust]
# unsafe_code = "forbid"  # Disabled due to necessary unsafe usage in mmap_writer
# missing_docs = "warn"  # Disabled due to extensive internal APIs

[lints.clippy]
# Disable uninlined format args warning
# This warning can be overly strict and may cause CI/local version conflicts
uninlined_format_args = "allow"

# Security and performance lints (selective)
# all = "warn"  # Too many warnings for current codebase
# pedantic = "warn"  # Too strict for current development
# nursery = "warn"  # Experimental lints
# cargo = "warn"  # Cargo-specific lints

# Allow some pedantic lints that can be overly strict
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
float_cmp = "allow"
if_not_else = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
must_use_candidate = "allow"
unused_self = "allow"
wildcard_imports = "allow"
unused_async = "allow"
missing_fields_in_debug = "allow"
significant_drop_tightening = "allow"
match_same_arms = "allow"
suboptimal_flops = "allow"
cast_lossless = "allow"
redundant_closure_for_method_calls = "allow"
missing_const_for_fn = "allow"
derive_partial_eq_without_eq = "allow"
use_self = "allow"
branches_sharing_code = "allow"
unnecessary_wraps = "allow"
map_unwrap_or = "allow"
return_self_not_must_use = "allow"
unchecked_duration_subtraction = "allow"
option_if_let_else = "allow"
cast_sign_loss = "allow"
